--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
     "@neondatabase/serverless": "^1.0.2",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
-    "hono": "^4.10.3"
+    "hono": "^4.10.3",
+    "inngest": "^3.45.1"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.2",
