--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,9 @@
     "@clerk/clerk-react": "^5.53.3",
     "@cloudinary/react": "^1.14.3",
     "@cloudinary/url-gen": "^1.22.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.5",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-devtools": "^0.7.0",
     "@tanstack/react-form": "^1.23.8",
@@ -25,9 +28,12 @@
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/router-plugin": "^1.132.0",
     "axios": "^1.13.1",
+    "chart.js": "^4.5.1",
     "lucide-react": "^0.545.0",
     "react": "^19.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
+    "recharts": "^3.5.0",
     "tailwindcss": "^4.0.6",
     "zod": "^4.1.12"
   },
