--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "chart.js": "^4.5.1",
     "jotai": "^2.15.1",
     "lucide-react": "^0.545.0",
+    "qrcode": "^1.5.4",
     "react": "^19.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
