--- a/server/package.json
+++ b/server/package.json
@@ -9,17 +9,23 @@
   },
   "dependencies": {
     "@clerk/backend": "^2.24.0",
+    "@getbrevo/brevo": "^3.0.1",
     "@hono/clerk-auth": "^3.0.3",
     "@hono/node-server": "^1.19.5",
     "@neondatabase/serverless": "^1.0.2",
+    "axios": "^1.13.2",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
     "hono": "^4.10.6",
-    "inngest": "^3.45.1"
+    "inngest": "^3.45.1",
+    "nodemailer": "^7.0.11",
+    "qrcode": "^1.5.4"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.2",
     "@types/node": "^20.11.17",
+    "@types/nodemailer": "^7.0.4",
+    "@types/qrcode": "^1.5.6",
     "drizzle-kit": "^0.31.6",
     "tsx": "^4.20.6",
     "typescript": "^5.8.3",
