added many things

--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,9 @@
     "@tanstack/router-plugin": "^1.132.0",
     "axios": "^1.13.1",
     "chart.js": "^4.5.1",
+    "html2canvas": "^1.4.1",
     "jotai": "^2.15.1",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.545.0",
     "qrcode": "^1.5.4",
     "react": "^19.2.0",
