--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
     "hono": "^4.10.6",
+    "hono-rate-limiter": "^0.4.2",
     "inngest": "^3.45.1",
     "nodemailer": "^7.0.11",
     "qrcode": "^1.5.4"
