--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "@hono/clerk-auth": "^3.0.3",
     "@hono/node-server": "^1.19.5",
     "@neondatabase/serverless": "^1.0.2",
+    "@types/pg": "^8.16.0",
     "axios": "^1.13.2",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
@@ -20,6 +21,7 @@
     "hono-rate-limiter": "^0.4.2",
     "inngest": "^3.45.1",
     "nodemailer": "^7.0.11",
+    "pg": "^8.18.0",
     "qrcode": "^1.5.4"
   },
   "devDependencies": {
