--- a/client/package.json
+++ b/client/package.json
@@ -27,12 +27,14 @@
     "@tanstack/react-router-devtools": "^1.132.0",
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/router-plugin": "^1.132.0",
+    "@yudiel/react-qr-scanner": "^2.5.1",
     "axios": "^1.13.1",
     "chart.js": "^4.5.1",
     "html2canvas": "^1.4.1",
     "jotai": "^2.15.1",
     "jspdf": "^3.0.4",
     "lucide-react": "^0.545.0",
+    "pdfjs-dist": "^5.4.624",
     "qrcode": "^1.5.4",
     "react": "^19.2.0",
     "react-chartjs-2": "^5.3.1",
