--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,67 +1,77 @@
 {
-    "version": 2,
-    "cleanUrls": true,
-    "trailingSlash": false,
-    "redirects": [
-        {
-            "source": "/old-path",
-            "destination": "/new-path",
-            "permanent": true
-        },
-        {
-            "source": "/twitter",
-            "destination": "https://twitter.com/yourhandle",
-            "permanent": false
-        }
-    ],
-    "rewrites": [
-        {
-            "source": "/api/v1/:path*",
-            "destination": "https://api.external-service.com/:path*"
-        },
-        {
-            "source": "/service-worker.js",
-            "headers": {
-                "cache-control": "public, max-age=0, must-revalidate"
-            },
-            "destination": "/static/scripts/sw.js"
-        }
-    ],
-    "headers": [
-        {
-            "source": "/(.*)",
-            "headers": [
-                {
-                    "key": "Content-Security-Policy",
-                    "value": "default-src 'self'; script-src 'self' 'unsafe-inline';"
-                },
-                {
-                    "key": "X-Frame-Options",
-                    "value": "DENY"
-                },
-                {
-                    "key": "X-Content-Type-Options",
-                    "value": "nosniff"
-                }
-            ]
-        },
-        {
-            "source": "/assets/(.*)",
-            "headers": [
-                {
-                    "key": "Cache-Control",
-                    "value": "public, max-age=31536000, immutable"
-                }
-            ]
-        }
-    ],
-    "functions": {
-        "api/heavy-calculation.js": {
-            "memory": 1024,
-            "maxDuration": 30
-        },
-        "api/auth/*.js": {
-            "memory": 512
-        }
+  "version": 2,
+  "cleanUrls": true,
+  "trailingSlash": false,
+
+  "redirects": [
+    {
+      "source": "/old-path",
+      "destination": "/new-path",
+      "permanent": true
+    },
+    {
+      "source": "/twitter",
+      "destination": "https://twitter.com/yourhandle",
+      "permanent": false
     }
+  ],
+
+  "rewrites": [
+    {
+      "source": "/api/v1/:path*",
+      "destination": "https://api.external-service.com/:path*"
+    },
+    {
+      "source": "/service-worker.js",
+      "destination": "/static/scripts/sw.js"
+    }
+  ],
+
+  "headers": [
+    {
+      "source": "/service-worker.js",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=0, must-revalidate"
+        }
+      ]
+    },
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Content-Security-Policy",
+          "value": "default-src 'self'; script-src 'self' 'unsafe-inline';"
+        },
+        {
+          "key": "X-Frame-Options",
+          "value": "DENY"
+        },
+        {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        }
+      ]
+    },
+    {
+      "source": "/assets/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    }
+  ],
+
+  "functions": {
+    "api/heavy-calculation.js": {
+      "memory": 1024,
+      "maxDuration": 30
+    },
+    "api/auth/*.js": {
+      "memory": 512
+    }
+  }
 }
